# problems

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/problems/: details.py  types.py
src/tests/: test_details.py  test_typed_details.py  test_types.py
